# Qualcom-fm-radio-

./: CHANGELOG.md  LICENSE  README.md  metadata.json
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/example/data/: FmDatabase.kt  FmRepository.kt  PresetDao.kt  PresetEntity.kt  ScanHistoryEntity.kt
app/src/main/java/com/example/fmjni/: FmNativeBridge.kt  HalStatus.kt  QualcommHalDetector.kt
app/src/main/java/com/example/fmservice/: FmAudioRouter.kt  FmBand.kt  FmRadioService.kt  RdsData.kt
app/src/main/java/com/example/ui/components/: FmDial.kt  HalStatusCard.kt  NumpadDialog.kt  RdsVisualizer.kt  SignalMeter.kt
app/src/main/java/com/example/ui/screens/: DiagnosticsScreen.kt  FmHomeScreen.kt  PresetListScreen.kt  SettingsScreen.kt  StationScannerDialog.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/: ExampleRobolectricTest.kt
fmjni/: CMakeLists.txt  README.md  fm_hal_wrapper.h  fm_jni.cpp
fmservice/: README.md
github/workflows/: build.yml
native/: CMakeLists.txt  qcom_fm_native.cpp
native/include/: qcom_fm.h
